[project]
name = "guess-the-number-game"
version = "0.1.0"
description = "Un juego de adivinanza de números en la terminal"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0"
]

[project.scripts]
guess-game = "guess_game.__main__:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
